--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color:rgb(229, 229, 229);
+   
 }
 
 .container {
@@ -20,6 +21,7 @@ html, body {
 }
     
 .div1 { 
+    /* font-family: DMSans-Regular; */
     grid-area: 1 / 3 / 4 / 9;
     background-color: hsl(256, 77%, 62%);
     margin: 5px;
@@ -30,7 +32,22 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
- }
+    text-align: center;
+}
+
+.div1 h1 {
+    font-family: 'DM Sans', sans-serif ;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+    padding: 0;
+}
+
+.div1 p {
+    font-family: 'DM Sans', sans-serif ;
+    font-size: 9px;
+    font-weight: 0.15em;
+}
 
 .div1 img {
     height: 15%;
