--- a/style.css
+++ b/style.css
@@ -69,13 +69,27 @@ html, body {
     padding: 10px;
     border-radius: 10px;
 }
+
+.div2 img {
+    width: 100%;
+    padding-top: 10px;
+}
+
 .div3 {
      grid-area: 6 / 6 / 8 / 11; 
      background-color: hsl(256, 67%, 59%);
      margin: 5px;
      padding: 10px;
      border-radius: 10px;
+     display: flex;
 }
+
+.div3 img {
+    width: 100%;
+    height: 130px;
+    padding: 5px;
+}
+
 .div4 { 
     grid-area: 1 / 1 / 5 / 3;
     background-color: hsl(48, 69%, 89%);
@@ -122,6 +136,14 @@ html, body {
     padding: 10px;
     border-radius: 10px;
 }
+
+.div6 img {
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
 .div7 { 
     grid-area: 4 / 3 / 6 / 6;
     background-color: hsla(0, 0%, 100%, 0.707);
@@ -129,6 +151,12 @@ html, body {
     padding: 10px;
     border-radius: 10px;
  }
+
+ .div7 img {
+    width: 100%;
+    padding-top: 10px;
+}
+
 .div8 {
     grid-area: 6 / 3 / 8 / 6;
     background-color: hsla(0, 0%, 100%, 0.707);
@@ -139,4 +167,21 @@ html, body {
 .div8 img {
     width: 100%;
     size: 100px;
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        flex-direction: column;
+    }
+    .parent {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* .parent>div>img{
+        width: 80%;
+        height: 180px;
+    } */
+     
+    
 }
